--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
   z-index: 9999;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
   .sidenav .sidenav-header {
-    background-color: red;
+    background-color: #dc3644;
     text-align: center;
     padding: 1em 0; }
     .sidenav .sidenav-header img {
